--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">BIDS Education &amp; Training Working Group</h1>
-      <h2 class="project-tagline">BIDS Training Working Group</h2>
-      <a href="https://github.com/BIDS/training-wg" class="btn">View on GitHub</a>
-      <a href="https://github.com/BIDS/training-wg/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/BIDS/training-wg/tarball/master" class="btn">Download .tar.gz</a>
+      <h2 class="project-tagline">Advancing Data Science Education & Training at UC Berkeley</h2>
+      <a href="data8.org" class="btn">Data 8</a>
+      <a href="databears.berkeley.edu" class="btn">Data Science Education Program</a>
+      <a href="bids.berkeley.edu" class="btn">BIDS</a>
     </section>
 
     <section class="main-content">
