Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">BIDS Education &amp; Training Working Group</h1>
-      <h2 class="project-tagline">Advancing Data Science Education & Training at UC Berkeley</h2>
-      <a href="data8.org" class="btn">Data 8</a>
-      <a href="databears.berkeley.edu" class="btn">Data Science Education Program</a>
-      <a href="bids.berkeley.edu" class="btn">BIDS</a>
+      <h2 class="project-tagline">BIDS Training Working Group</h2>
+      <a href="https://github.com/BIDS/training-wg" class="btn">View on GitHub</a>
+      <a href="https://github.com/BIDS/training-wg/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/BIDS/training-wg/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-the-bids-education-training-working-group" class="anchor" href="#welcome-to-the-bids-education-training-working-group" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the BIDS Education Training Working Group!</h3>
+<a id="welcome-to-the-bids-education-training-working-group" class="anchor" href="#welcome-to-the-bids-education-training-working-group" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the BIDS Education Training Working Group!</h3>
 
 <p>The BIDS ETWG meets bi-monthly to discuss issues</p>
 
 <h3>
-<a id="members" class="anchor" href="#members" aria-hidden="true"><span class="octicon octicon-link"></span></a>Members</h3>
+<a id="members" class="anchor" href="#members" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Members</h3>
 
 <ul>
 <li>Cathryn Carson (Co-Chair) - Division of Social Sciences &amp; History</li>
@@ -44,7 +44,7 @@
 </ul>
 
 <h3>
-<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
+<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h3>
 
 <ul>
 <li>Data Science Education Program</li>
