--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">BIDS Education &amp; Training Working Group</h1>
-      <h2 class="project-tagline">BIDS Training Working Group</h2>
-      <a href="https://github.com/BIDS/training-wg" class="btn">View on GitHub</a>
-      <a href="https://github.com/BIDS/training-wg/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/BIDS/training-wg/tarball/master" class="btn">Download .tar.gz</a>
+      <h2 class="project-tagline">An inside look into the various projects going on at BIDS!</h2>
     </section>
 
     <section class="main-content">
       <h3>
 <a id="welcome-to-the-bids-education-training-working-group" class="anchor" href="#welcome-to-the-bids-education-training-working-group" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the BIDS Education Training Working Group!</h3>
 
-<p>The BIDS ETWG meets bi-monthly to discuss issues</p>
+<p>The BIDS ETWG meets bi-monthly to discuss issues. BIDS encourages collaboration between undergraduate students, graduate students, and 
+professors. Here are a list of our various projects!</p>
 
 <h3>
 <a id="members" class="anchor" href="#members" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Members</h3>
