--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
           <a id="forkme_banner" href="https://github.com/BIDS/training-wg">View on GitHub</a>
 
           <h1 id="project_title">BIDS Education &amp; Training Working Group</h1>
-          <h2 id="project_tagline">BIDS Training Working Group</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/BIDS/training-wg/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/BIDS/training-wg/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+          <h2 id="project_tagline">An inside look at the various projects going on at BIDS!</h2>
         </header>
     </div>
 
