Changed wording and links

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/BIDS/training-wg">View on GitHub</a>
 
           <h1 id="project_title">BIDS Education &amp; Training Working Group</h1>
           <h2 id="project_tagline">An inside look at the various projects going on at BIDS!</h2>
+          <a name= "LandingSpot"><a href ="http://urap.berkeley.edu/" class="btn">Join a student team!</a></a>
         </header>
     </div>
 
@@ -29,7 +29,10 @@
         <h3>
 <a id="welcome-to-the-bids-education-training-working-group" class="anchor" href="#welcome-to-the-bids-education-training-working-group" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the BIDS Education Training Working Group!</h3>
 
-<p>The BIDS ETWG meets bi-monthly to discuss issues</p>
+<p>The BIDS ETWG meets bi-monthly to discuss events and issues occuring within the Data Science at Berkeley community. Through our various projects,
+we encourage collaboration between undergraduate students, graduate students, and professors. Data Science has been a growing field at 
+Berkeley the last couple of years, and there are many groups here at Berkeley who have made that possible. In addition to looking 
+to expand our <a href = "http://bids.github.io/training-wg/index.html#LandingSpot>student team</a>, the faculty at BIDS is always excited to speak to students who drop by.</p>
 
 <h3>
 <a id="members" class="anchor" href="#members" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Members</h3>
