--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
           <h1 id="project_title">BIDS Education &amp; Training Working Group</h1>
           <h2 id="project_tagline">An inside look at the various projects going on at BIDS!</h2>
-          <a href ="http://urap.berkeley.edu/" class="btn">Join a student team!</a>
         </header>
     </div>
 
@@ -27,6 +26,10 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
+            <div class= "wrapper">
+            <a href ="http://urap.berkeley.edu/" class="btn">Join a student team!</a>
+          </div>
+          
 <a id="welcome-to-the-bids-education-training-working-group" class="anchor" href="#welcome-to-the-bids-education-training-working-group" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the BIDS Education Training Working Group!</h3>
 
 <p>The BIDS ETWG meets bi-monthly to discuss events and issues occuring within the Data Science at Berkeley community. Through our various projects,
