added new folders

--- a/index_old.html
+++ b/index_old.html
@@ -26,6 +26,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
+        <h1> LOLOLOLOL</h1>
         
           
 <a id="welcome-to-the-bids-education-training-working-group" class="anchor" href="#welcome-to-the-bids-education-training-working-group" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the BIDS Education Training Working Group!</h3>
