--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Twenty by HTML5 UP</title>
+		<title>BIDS Education &amp; Training Working Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,7 +22,6 @@
 					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
 							<li class="submenu">
 								<a href="#">Layouts</a>
 								<ul>
@@ -42,7 +41,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li><a href="#" class="button special">DataConnect</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -59,13 +58,13 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>BIDS Education &amp; Training Working Group</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
+						<p>An <strong>inside</strong> look at
 						<br />
-						responsive template
+						the various projects
 						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						at <a href="https://bids.berkeley.edu/">BIDS</a>.</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
