--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
 					<header class="special container">
 						<span class="icon fa-bar-chart-o"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
-						<br />
-						I decided to give it a really creative name.</h2>
+						<h2>These teams play a huge role in <strong>evolving</strong>
+						<br /> the Data Science program at Berkeley
+						</h2>
 						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
 						<br />
 						it's minimally designed, fully responsive, built on HTML5/CSS3/<strong>skel</strong>,
