Edit body paragraphs

--- a/index.html
+++ b/index.html
@@ -77,12 +77,10 @@
 						<h2>These teams play a huge role in <strong>evolving</strong>
 						<br /> the Data Science program at Berkeley
 						</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3/<strong>skel</strong>,
-						and, like all my stuff,
-						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						<p>The BIDS ETWG meets bi-monthly to discuss events and issues occuring within the Data Science at Berkeley community
+						<br /> Through our various projects, we encourage <strong>collaboration</strong> between undergraduate students, graduate students, and professors.
+						Data Science has been a growing field at Berkeley the last couple of years, and there are many groups here at Berkeley who have made that possible.
+						<br /> In addition to looking to <strong>expand</strong> our student team, the faculty at BIDS is always excited to speak to students who drop by. </p>
 					</header>
 
 					<!-- One -->
@@ -91,7 +89,7 @@
 								<div class="8u 12u(narrower)">
 
 									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+										<h2>How can <strong>you</strong> get involved at BIDS?</h2>
 									</header>
 									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
 									<footer>
