--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<br /> the Data Science program at Berkeley
 						</h2>
 						<p>The BIDS ETWG meets bi-monthly to discuss events and issues occuring within the Data Science at Berkeley community
-						<br /> Through our various projects, we encourage <strong>collaboration</strong> between undergraduate students, graduate students, and professors.
+						<br /> Through our various projects, we encourage <strong>collaboration</strong> between undergraduate/graduate students & professors.
 						<br /> In addition to looking to <strong>expand</strong> our student team, the faculty at BIDS is always excited to speak to students who drop by. </p>
 					</header>
 
