--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
 									<header>
 										<h2>How can <strong>you</strong> get involved at BIDS?</h2>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+									<p>Every semester, we have more students join our student teams here at BIDS. There are many ways to get involved in BIDS even without joining 
+									a team. Check out our calendar of events to find more ways to get involved in our community!</p>
 									<footer>
 										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
+											<li><a href="#" class="button">Check out our events!</a></li>
 										</ul>
 									</footer>
 
