Update professor bios

--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Cathryn Carson</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Cathryn Carson is a historian and ethnographer of contemporary science and technology. Before getting her PhD in history, 
+										she was trained in computational condensed matter physics. As Associate Dean of Social Sciences, she built D-Lab, which opened in 2013 
+										and serves social scientists (and others) across campus doing data-intensive research.</p>
 									</section>
 
 								</div>
@@ -133,9 +135,11 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>Also Something</h3>
+											<h3>Anthony Suen</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Anthony is a project program analyst for the UC Berkeley Data Science Initiative and a BIDS fellow.
+										Anthony co-founded the BIDS Collaborative, which helps students collaborate with non-profits, government,
+										and research institutes to solve challenging real-world issues.</p>
 									</section>
 
 								</div>
@@ -144,9 +148,10 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>Probably Something</h3>
+											<h3>Carl Boettiger</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Carl is an ecologist working on problems in ecological forecasting and decision theory. 
+										 His research blends theoretical investigation with the creation of software tools to use and test these concepts in ecological questions.  </p>
 									</section>
 
 								</div>
