--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
 										<header>
 											<h3>Data Science Education Program</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>The UC Berkeley Data Science education program seeks to make the ability to understand and formulate 
+										reasoning based on data accessible to all Berkeley students. Even before the first pilot offerings,
+										a team of students were working to understand how such a program might be designed to best provide what students view as essential to their college experience. </p>
 									</section>
 
 								</div>
@@ -184,7 +186,9 @@
 										<header>
 											<h3>Hacker Within</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>This is a collaborative peer-driven weekly meeting for sharing skills and best practices for scientific computation. 
+										This meeting would be a great venue for introducing new libraries, showing off useful features of a domain-specific code you're using, 
+										teaching a new skill that you’ve learned, or bringing up a computational problem you're having.</p>
 									</section>
 
 								</div>
@@ -197,7 +201,8 @@
 										<header>
 											<h3>BIDS Collaborative</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p> BIDS Collaborative hopes to develop innovative data science solutions to challenges in academia, government, non-profits, and industry while also
+										creating a pipeline of students for successful future careers in data science. </p>
 									</section>
 
 								</div>
@@ -208,7 +213,10 @@
 										<header>
 											<h3>Diversity in Data Science </h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>Encouraging diversity in Data Science has been a main focus; often times, students of various majors who have had
+										little to no experience programming will find Data Science intimidating, and will therefore choose not to 
+										pursue it. Through the new Data Science Scholars program, Data Science has been able to become a much more
+										inclusive space.</p>
 									</section>
 
 								</div>
