--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
 				<section id="cta">
 
 					<header>
-						<h2>Ready to do <strong>something</strong>?</h2>
-						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
+						<h2>Explore more!</h2>
+						<p>Check out some of our other website:</p>
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="#" class="button special">Take My Money</a></li>
-							<li><a href="#" class="button">LOL Wut</a></li>
+							<li><a href="http://data.berkeley.edu/" class="button special">Data.Berkeley</a></li>
+							<li><a href="http://dataconnect.berkeley.edu/" class="button">DataConnect</a></li>
 						</ul>
 					</footer>
 
