--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/berkeleycampus.jpg" alt="" /></a>
 										<header>
 											<h3>Data Science Education Program</h3>
 										</header>
