--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
 								</div>
 							</div>
 						</section>
+						
+						<section>
+							<iframe src="https://calendar.google.com/calendar/embed?src=berkeley.edu_6809ngcqe1nfd234i8f9spk75s%40group.calendar.google.com&ctz=America/Los_Angeles" 
+							style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+							
+						</section>
 
 					<!-- Two -->
 						<section class="wrapper style1 container special">
@@ -182,7 +188,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/berkeleycampus.jpg" alt="" /></a>
 										<header>
 											<h3>Hacker Within</h3>
 										</header>
@@ -197,7 +203,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/berkeleycampus.jpg" alt="" /></a>
 										<header>
 											<h3>BIDS Collaborative</h3>
 										</header>
@@ -209,7 +215,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/berkeleycampus.jpg" alt="" /></a>
 										<header>
 											<h3>Diversity in Data Science </h3>
 										</header>
