--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/datascience1.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/datascience2.jpg" alt="" /></a>
 										<header>
 											<h3>Hacker Within</h3>
 										</header>
@@ -198,7 +198,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/datascience2.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/datascience1.png" alt="" /></a>
 										<header>
 											<h3>BIDS Collaborative</h3>
 										</header>
