Adjust height and width of pictures

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/berkeleycampus.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/berkeleycampus.jpg" alt="" height="42" width="42" /></a>
 										<header>
 											<h3>Data Science Education Program</h3>
 										</header>
@@ -183,7 +183,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/datascience2.png" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/datascience2.png" alt="" height="42" width="42" /></a>
 										<header>
 											<h3>Hacker Within</h3>
 										</header>
@@ -198,7 +198,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/datascience1.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/datascience1.jpg" alt="" height="42" width="42" /></a>
 										<header>
 											<h3>BIDS Collaborative</h3>
 										</header>
@@ -210,7 +210,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/Sather.png" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/Sather.png" alt="" height="42" width="42" /></a>
 										<header>
 											<h3>Diversity in Data Science </h3>
 										</header>
