--- a/index.html
+++ b/index.html
@@ -233,10 +233,11 @@
 
 				</article>
 					<section>
+						<center>
 							<iframe src="https://calendar.google.com/calendar/embed?src=berkeley.edu_6809ngcqe1nfd234i8f9spk75s%40group.calendar.google.com&ctz=America/Los_Angeles" 
 							style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-							
-						</section>
+						</center>
+					</section>
 
 			<!-- CTA -->
 				<section id="cta">
