Add content about Caro

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 										</header>
 										<p>Carl is an ecologist working on problems in ecological forecasting and decision theory. 
 										 His research blends theoretical investigation with the creation of software tools to use and test these concepts in ecological questions.  </p>
+										<p>Hello everyone!</p>
 									</section>
 
 								</div>
