--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>BIDS Education &amp; Training Working Group</title>
+		<title>BIDS</title>
+		<title>Education &amp; Training Working Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -17,7 +18,7 @@
 					<nav id="nav">
 						<ul>
 
-							<li><a href="#" class="button special">DataConnect</a></li>
+							<li><a href="#" class="button special">BIDS</a></li>
 						</ul>
 					</nav>
 				</header>
