--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
 						<header>
 							<h2>BIDS Education &amp; Training Working Group</h2>
 						</header>
-						<p>An <strong>inside</strong> look at
-						<br />
-						the various projects
+						<p> <strong>Advancing</strong> 
+						<br />data science education and training across UC Berkeley
 						<br />
 						at <a href="https://bids.berkeley.edu/">BIDS</a>.</p>
 						<footer>
