--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<nav id="nav">
 						<ul>
 
-							<li><a href="#" class="button special">BIDS</a></li>
+							<li><a href="https://bids.berkeley.edu/" class="button special">BIDS</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -38,9 +38,9 @@
 							<h2>BIDS Education &amp; Training Working Group</h2>
 						</header>
 						<p> <strong>Advancing</strong> 
-						<br />data science education and training across UC Berkeley
+						<br />data science education and training across 
 						<br />
-						at <a href="https://bids.berkeley.edu/">BIDS</a>.</p>
+						</a>UC Berkeley</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
