--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
 										<header>
 											<h3>BIDS Collaborative</h3>
 										</header>
-										<p> BIDS Collaborative hopes to develop innovative data science solutions to challenges in academia, government, non-profits, and industry while also
-										creating a pipeline of students for successful future careers in data science. </p>
+										<p> The BIDS Collaborative advances research and training by connecting students teams with research projects at UC Berkeley and beyond. </p>
 									</section>
 
 								</div>
