--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
 								<div class="8u 12u(narrower)">
 
 									<header>
-										<h2>How can <strong>you</strong> get involved at BIDS?</h2>
+										<h2>How can <strong>you</strong> get involved with the BIDS Education and Training Working Group?</h2>
 									</header>
-									<p>Every semester, we have more students join our student teams here at BIDS. There are many ways to get involved in BIDS even without joining 
-									a team. Check out our calendar of events to find more ways to get involved in our community!</p>
+									<p>Our bimonthly meetings are a great way to get plugged into the ETWG working group.</p>
 									<footer>
 										<ul class="buttons">
-											<li><a href="#" class="button">Check out our events!</a></li>
+											<li><a href="#" class="button">Check out our meeting times!</a></li>
 										</ul>
 									</footer>
 
