--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<p> <strong>Advancing</strong> 
 						<br />data science education and training across 
 						<br />
-						</a>UC Berkeley</p>
+						<strong>Advancing</strong> UC Berkeley</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
@@ -48,7 +48,6 @@
 						</footer>
 
 					</div>
-
 				</section>
 
 			<!-- Main -->
