--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 										<header>
 											<h3>Anthony Suen</h3>
 										</header>
-										<p>Anthony is a project program analyst for the UC Berkeley Data Science Initiative and a BIDS fellow.
+										<p>Anthony is an program analyst in UC Berkeley Data Science Initiative and a BIDS fellow.
 										Anthony co-founded the BIDS Collaborative, which helps students collaborate with non-profits, government,
 										and research institutes to solve challenging real-world issues.</p>
 									</section>
@@ -126,14 +126,7 @@
 								</div>
 								<div class="4u 12u(narrower)">
 
-									<section>
-										<span class="icon featured fa-check"></span>
-										<header>
-											<h3>Carl Boettiger</h3>
-										</header>
-										<p>Carl is an ecologist working on problems in ecological forecasting and decision theory. 
-										 His research blends theoretical investigation with the creation of software tools to use and test these concepts in ecological questions.  </p>
-										<p>Hello everyone!</p>
+									<section
 									</section>
 
 								</div>
