--- a/index.html
+++ b/index.html
@@ -103,11 +103,10 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>Cathryn Carson</h3>
+											<h3>Data Science Education Program</h3>
 										</header>
-										<p>Cathryn Carson is a historian and ethnographer of contemporary science and technology. Before getting her PhD in history, 
-										she was trained in computational condensed matter physics. As Associate Dean of Social Sciences, she built D-Lab, which opened in 2013 
-										and serves social scientists (and others) across campus doing data-intensive research.</p>
+										<p>Berkeley Data Science education program seeks to make the ability to understand and formulate 
+										reasoning based on data accessible to all Berkeley students.</p>
 									</section>
 
 								</div>
@@ -137,7 +136,7 @@
 						<section class="wrapper style3 container special">
 
 							<header class="major">
-								<h2>Some of our current projects</strong></h2>
+								<h2>Some of our current team members</strong></h2>
 							</header>
 
 							<div class="row">
@@ -146,11 +145,11 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/berkeleycampus.jpg" alt="" height="300" width="60" /></a>
 										<header>
-											<h3>Data Science Education Program</h3>
+											<h3>Cathryn Carson</h3>
 										</header>
-										<p>The UC Berkeley Data Science education program seeks to make the ability to understand and formulate 
-										reasoning based on data accessible to all Berkeley students. Even before the first pilot offerings,
-										a team of students were working to understand how such a program might be designed to best provide what students view as essential to their college experience. </p>
+										<p>Cathryn Carson is a historian and ethnographer of contemporary science and technology. Before getting her PhD in history, 
+										she was trained in computational condensed matter physics. As Associate Dean of Social Sciences, she built D-Lab, which opened in 2013 
+										and serves social scientists (and others) across campus doing data-intensive research. </p>
 									</section>
 
 								</div>
