--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
 					<header class="special container">
 						<span class="icon fa-bar-chart-o"></span>
-						<h2>These teams play a huge role in <strong>evolving</strong>
-						<br /> the Data Science program at Berkeley
+						<h2>The BIDS Education and Training Working Group plays an active role in <strong>evolving</strong>
+						<br /> the Data Science program at UC Berkeley
 						</h2>
 						<p>The BIDS ETWG meets bi-monthly to discuss events and issues occuring within the Data Science at Berkeley community
-						<br /> Through our various projects, we encourage <strong>collaboration</strong> between undergraduate/graduate students & professors.
-						<br /> In addition to looking to <strong>expand</strong> our student team, the faculty at BIDS is always excited to speak to students who drop by. </p>
+						<br /> We serve as a <strong>collaborative</strong> forum between undergraduate/graduate students, post-docs & faculty.
+						 </p>
 					</header>
 
 					<!-- One -->
