--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
 							<header class="major">
 								<h2>Some of our current team members</strong></h2>
 							</header>
-
 							<div class="row">
 								<div class="6u 12u(narrower)">
 
@@ -161,9 +160,7 @@
 									<li><a href="#" class="button">See More</a></li>
 								</ul>
 							</footer>
-
 						</section>
-
 				</article>
 					<section>
 						<center>
@@ -177,7 +174,7 @@
 
 					<header>
 						<h2>Explore more!</h2>
-						<p>Check out some of our other website:</p>
+						<p>Learn more about the Berkeley Data Science Initiative:</p>
 					</header>
 					<footer>
 						<ul class="buttons">
