--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<section class="wrapper style3 container special">
 
 							<header class="major">
-								<h2>Some of our current team members</strong></h2>
+								<h2>Some of our current research projects</strong></h2>
 							</header>
 							<div class="row">
 								<div class="6u 12u(narrower)">
@@ -144,12 +144,9 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/Sather.png" alt="" height="300" width="60" /></a>
 										<header>
-											<h3>Diversity in Data Science </h3>
+											<h3>Data Scholars</h3>
 										</header>
-										<p>Encouraging diversity in Data Science has been a main focus; often times, students of various majors who have had
-										little to no experience programming will find Data Science intimidating, and will therefore choose not to 
-										pursue it. Through the new Data Science Scholars program, Data Science has been able to become a much more
-										inclusive space.</p>
+										<p>Hosted in the DLab, the Data Scholars program encouraging diversity in Data Science Education Program by providing support to the students from underrepresented backgrounds</p>
 									</section>
 
 								</div>
